conf/machine/hummingboard-pulse.conf: fix IMAGE_BOOT_FILES
Signed-off-by: Maciej Pijanowski <maciej.pijanowski@3mdeb.com>

--- a/conf/machine/hummingboard-pulse.conf
+++ b/conf/machine/hummingboard-pulse.conf
@@ -52,7 +52,7 @@ OPTEE_BIN_EXT = "8mq"
 # Add additional firmware
 MACHINE_FIRMWARE_append = " linux-firmware-ath10k"
 
-IMAGE_BOOTFILES += "boot.scr"
+IMAGE_BOOT_FILES += "boot.scr"
 do_image_wic[depends] += "u-boot-scr-solidrun-imx8:do_deploy"
 
 # Use gstreamer 1.16 from meta-freescale
